@@ -1,3 +1,10 @@
+2005-01-24  Lute Kamstra  <lute@gnu.org>
+
+	* textmodes/ispell.el (ispell-dictionary-alist-4): Rewrite the
+	CASECHARS and NOT-CASECHARS regular expressions of the
+	"nederlands" and "nederlands8" dictionaries to prevent a "Range
+	striding over charsets" error.
+
 2005-01-24  Jay Belanger  <belanger@truman.edu>
 
 	* calc/calc-store.el (calc-declare-variable): Use calc-var-name to
